# librarian

./: .gitignore  Cargo.toml  run.sh
src/: auth.rs  lib.rs  main.rs
src/api/: mod.rs
src/api/handlers/: archive.rs  imports.rs  jobs.rs  mod.rs  releases.rs  sources.rs  status.rs  websocket.rs
src/crdt/: job.rs  mod.rs
src/node/: config.rs  mod.rs
src/worker/: analyze.rs  audit.rs  buffer.rs  cover.rs  import.rs  metadata.rs  mod.rs  release.rs  source.rs
synthesis/: SPEC-FLAGSHIP-INTEGRATION.md
