[package]
name = "librarian"
version = "0.1.0"
edition = "2021"
description = "Content operations tool for Riff - first production user of Citadel protocols"
license = "AGPL-3.0-or-later"

[dependencies]
# Citadel Protocol Suite
citadel-crdt = { path = "../citadel/crates/citadel-crdt" }
citadel-docs = { path = "../citadel/crates/citadel-docs" }
citadel-gossip = { path = "../citadel/crates/citadel-gossip" }
citadel-ping = { path = "../citadel/crates/citadel-ping" }
citadel-spore = { path = "../citadel/crates/citadel-spore" }
citadel-protocols = { path = "../citadel/crates/citadel-protocols" }

# Async runtime
tokio = { version = "1", features = ["full"] }

# TUI
ratatui = { version = "0.29", features = ["crossterm"] }
crossterm = "0.27"

# HTTP client (Archive.org, Archivist)
reqwest = { version = "0.12", features = ["json", "stream"] }

# HTTP server (REST API)
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tokio-tungstenite = "0.24"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1.3"

# Crypto
blake3 = "1.5"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
getrandom = "0.2"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Rate limiting
governor = { version = "0.6", features = ["std", "jitter"] }

# URL encoding
urlencoding = "2"

# Utilities
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
log = "0.4"
simplelog = "0.12"
futures-util = "0.3"
chrono = { version = "0.4", features = ["serde"] }
config = { version = "0.14", features = ["toml"] }
directories = "5"
toml = "0.8"
hex = "0.4"

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "librarian"
path = "src/main.rs"
